--- a/style.css
+++ b/style.css
@@ -460,6 +460,9 @@
     text-align: center;
     overflow: hidden;
     transition: all 0.3s ease;
+
+    color: #fff; /* Make the text white */
+
   }
   
   .projects .carousel .card:hover {
