--- a/style.css
+++ b/style.css
@@ -647,6 +647,15 @@
     background: none;
     animation: pulsate 1s ease-in-out;
   }
+
+.card-link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.card-link:hover .card {
+  /* Add any hover effects here if needed */
+}
   
   /*  Social  */
   .col-4 {
