--- a/style.css
+++ b/style.css
@@ -893,4 +893,22 @@
   .contact .contact-content .row .info {
     margin-left: 30px; /* Ensure all rows have the same margin */
   }
+.skill-container {
+    margin: 20px 0;
+    display: flex;
+    align-items: center;
+}
+
+.skill-bar {
+    width: 80%;
+    margin-right: 10px;
+}
+
+.circle-skill {
+    width: 150px;
+    height: 150px;
+    margin: 20px;
+    display: inline-block;
+}
+
   
